--- a/index.xhtml
+++ b/index.xhtml
@@ -4,9 +4,31 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <title></title>
+    <title>测试demo</title>
 </head>
 <body>
+<div>
+    <div>
+        <div><h1>这是一级标题</h1></div>
+        <div><h2>这是二级标题</h2></div>
+    </div>
+    <div>
+        <p>这是P标签</p>
+        <span>span标签</span>&nbsp;
+        <strong>strong加粗</strong>&nbsp;
+        <b>b加粗</b>&nbsp;
+        <u>u下划线</u>&nbsp;
+        <i>i倾斜</i>&nbsp;
+        <em>em倾斜</em>&nbsp;
+        <a href="">超链接</a><br/><hr/>
+        <img src="" alt="图片"/>
+        <br/>
+        <!--这是一段注释-->
 
+    </div>
+    <div>
+
+    </div>
+</div>
 </body>
 </html>
