--- a/index.xhtml
+++ b/index.xhtml
@@ -21,13 +21,51 @@
         <i>i倾斜</i>&nbsp;
         <em>em倾斜</em>&nbsp;
         <a href="">超链接</a><br/><hr/>
-        <img src="" alt="图片"/>
+        <img src="public/img/huli.jpg" alt="图片" height="150" width="150"/>
         <br/>
         <!--这是一段注释-->
 
     </div>
     <div>
+        <p>表格</p>
+        <table border="1">
+            <tr>
+                <th>姓名</th>
+                <th>性别</th>
+                <th>年龄</th>
+            </tr>
+            <tr>
+                <td>张三</td>
+                <td>男</td>
+                <td>14</td>
+            </tr>
+            <tr>
+                <td>小红</td>
+                <td>女</td>
+                <td>10</td>
+            </tr>
+        </table>
+    </div>
+    <div>
+        <p>表单</p>
 
+        <form action="">
+            <input type="text" value="姓名"/><br/>
+            <input type="radio" value=""/>男
+            <input type="radio" value=""/>女 <br/>
+            <input type="text" value="年龄"/><br/>
+            <input type="password" value="密码"/><br/>
+            <textarea name="" id="" cols="30" rows="10">备注</textarea><br/>
+            <button>提交</button>
+        </form>
+    </div>
+    <div>
+        <p>选择框</p>
+        <select name="" id="">
+            <option value="">选择</option>
+            <option value="">2</option>
+            <option value="">3</option>
+        </select>
     </div>
 </div>
 </body>
