--- a/js.html
+++ b/js.html
@@ -10,6 +10,13 @@
 <button id="button">确认填写</button>
 
 <div>您输入的值是：<span id="aqi-display">尚无录入</span></div>
+<hr/>
+<h3>污染城市列表</h3>
+<ul id="aqi-list">
+    <!--
+        <li>第一名：福州（样例），10</li>
+          <li>第二名：福州（样例），10</li> -->
+</ul>
 </body>
 </html>
 <script>
@@ -18,4 +25,28 @@
     {
         document.getElementById("aqi-display").innerText = document.getElementById("aqi-input").value;
     }
+
+    var aqiData = [
+        ["北京", 90],
+        ["上海", 50],
+        ["福州", 10],
+        ["广州", 70],
+        ["成都", 90],
+        ["西安", 100]
+    ];
+
+    (function(){
+        /*
+         在注释下方编写代码
+         遍历读取aqiData中各个城市的数据
+         将空气质量指数大于60的城市显示到aqi-list的列表中
+         */
+        var html = '';
+        for(var i=0;i<aqiData.length;i++){
+            if(aqiData[i][1] > 60){
+                html += '<li>'+aqiData[i][0]+'：'+ aqiData[i][1]+'</li>';
+            }
+        }
+        document.getElementById("aqi-list").innerHTML = html;
+    })();
 </script>
