--- a/js.html
+++ b/js.html
@@ -17,6 +17,28 @@
         <li>第一名：福州（样例），10</li>
           <li>第二名：福州（样例），10</li> -->
 </ul>
+<hr/>
+<ul id="source">
+    <li>北京空气质量：<b>90</b></li>
+    <li>上海空气质量：<b>70</b></li>
+    <li>天津空气质量：<b>80</b></li>
+    <li>广州空气质量：<b>50</b></li>
+    <li>深圳空气质量：<b>40</b></li>
+    <li>福州空气质量：<b>32</b></li>
+    <li>成都空气质量：<b>90</b></li>
+</ul>
+
+<ul id="resort">
+    <!--
+    <li>第一名：北京空气质量：<b>90</b></li>
+    <li>第二名：北京空气质量：<b>90</b></li>
+    <li>第三名：北京空气质量：<b>90</b></li>
+     -->
+
+</ul>
+
+<button id="sort-btn">排序</button>
+
 </body>
 </html>
 <script>
@@ -49,4 +71,81 @@
         }
         document.getElementById("aqi-list").innerHTML = html;
     })();
+
+
+    /**
+     * getData方法
+     * 读取id为source的列表，获取其中城市名字及城市对应的空气质量
+     * 返回一个数组，格式见函数中示例
+     */
+    function getData() {
+        var li = document.getElementById('source').getElementsByTagName('li');
+        var data=[];
+        //遍历li，获取城市空气质量
+        for(var i=0;i<li.length;i++){
+            var mycity=li[i].innerHTML.substr(0,7);//获取li的城市字符串
+            var mynum=li[i].getElementsByTagName('b')[0].innerHTML;//获取b标签的内容即空气质量数值
+            data.push([mycity,mynum]);//向数组的末尾添加元素
+        }
+
+        return data;
+
+    }
+
+    function listToMatrix(list, elementsPerSubArray) {
+        var matrix = [], i, k;
+        for (i = 0, k = -1; i < list.length; i++) {
+            if (i % elementsPerSubArray === 0) {
+                k++;
+                matrix[k] = [];
+            }
+            matrix[k].push(list[i]);
+        }
+        return matrix;
+    }
+    /**
+     * sortAqiData
+     * 按空气质量对data进行从小到大的排序
+     * 返回一个排序后的数组
+     */
+    function sortAqiData(data) {
+        function sortNumber(a,b){
+            return b[1]-a[1]
+        }//比较两个元素值并从小到大排序
+        data.sort(sortNumber);//将数据data利用sortNumber方法进行从小到大排序
+        return data;
+    }
+
+    var arr=['一','二','三','四','五','六','七'];//定义一个中文大写数字一维数组
+    /**
+     * render
+     * 将排好序的城市及空气质量指数，输出显示到id位resort的列表中
+     * 格式见ul中的注释的部分
+     */
+    function render(data) {
+        for(var i=0;i<data.length;i++){
+            var render_li=document.createElement('li');//创建li元素节点
+            var render_ul=document.getElementById('resort');//获取id为resort的节点
+            render_li.innerHTML="第"+arr[i]+"名"+data[i][0]+'<b>'+data[i][1]+'</b>';
+            render_ul.appendChild(render_li);//appendChild添加子元素方法，语法是parent.appendChild(child)
+        }
+    }
+
+    function btnHandle() {
+        var aqiData = getData();
+
+        aqiData = sortAqiData(aqiData);
+
+        render(aqiData);
+    }
+
+    function init() {
+
+        // 在这下面给sort-btn绑定一个点击事件，点击时触发btnHandle函数
+        var btn = document.getElementById("sort-btn").onclick=btnHandle;
+
+    }
+
+    init();
+
 </script>
